10-7-19
- new array data structure to simplify code in source/symbol/image.c
- better read_memory_at_location

9-30-19
- fixed a couple segfaults that occured when compiled without ASan
- renamed some structs
- free COMMAND array when quitting
- nicer thread select output

9-28-19
- in disassembly, symbolicate branch targets

9-23-19
- symbolicated disassembly
- better thread list output

9-19-19
- unnamed symbols are successfully resolved, at this point, symbol support
seems to be stable

9-6-19
- logarithmic search time for looking up symbols based on virtual address
rather than linear search time, huge speed improvements

9-2-19
- vastly improved symbolication, uses much, much less memory, and it is much,
much faster

8-27-19
- symbolize every available symbol (very slow, will need to improve)

8-23-19
- symbolic backtraces can symbolize images loaded into debuggee, not just
the debuggee (not perfect yet)

8-20-19
- new command: 'symbols add'
- started symbolicated backtraces

8-19-19
- fixed concat logic/memory leaks
- fixed linkedlist logic/memory leaks
- put in libsym
- implemented the platform specific parts of the DWARF expression evaluator

7-10-19
- fix up cmdfunc_kill logic so we don't get stuck in wait4

7-6-19
- new command: 'step inst-over', instruction level step over

7-2-19
- new command: 'evaluate'

7-1-19
- new command: 'signal deliver'
- fixed some memory leaks in the audit functions

6-30-19
- "thread specific" software breakpoints
- fixed up signal handling

6-29-19
- use rl_display_match_list in documentation.c
- do away with repairing the cmd_args_t struct and just pass a copy to the
audit functions

6-28-19
- revert back to replying to exceptions when the user issues the continue
command
- fix up signal handle regex

6-27-19
- use pipes for more efficient I/O
- fixed up strext.c concat functions
- take advanage of libhistory to manage the history file
- set non-thread specific breakpoints on new threads

6-22-19